--- a/thermometer/platformio.ini
+++ b/thermometer/platformio.ini
@@ -13,5 +13,5 @@ platform = atmelavr
 board = uno
 framework = arduino
 lib_deps = 
-	marcoschwartz/LiquidCrystal_I2C@^1.1.4
 	hwspeedy/DHT-Sensor@^1.4.3
+	arduino-libraries/SD@^1.3.0
